# Nioh3-Mod-Manager

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Nioh3ModManager.spec  README.md  backend_manager.py  build.py  conflict_detection.py  gui.py  loose_file_converter.py  main.py  manifest_schema.py  mod_manager.py  nexusmods_description.bbcode  pyproject.toml  release.py  requirements.txt  sandbox_lab.py  test_scanning.py
docs/memos/: archive-handling.md  backend-and-state.md  gui-and-user-flows.md  index.md  invariants-and-gotchas.md  overview.md  testing-and-sandbox.md
skills/repo-continuity-notes/: SKILL.md
skills/repo-continuity-notes/agents/: openai.yaml
tests/: conftest.py  test_loose_file_converter.py  test_mod_manager.py
tests/fixtures/conflicting_manifest/: nioh3modmanifest.json
tests/fixtures/conflicting_manifest/files/: conflicting.yumiamod.json
tests/fixtures/manifest_full_metadata/: nioh3modmanifest.json
tests/fixtures/manifest_full_metadata/common/: full.yumiamod.json
tests/fixtures/manifest_mod_common_only/: nioh3modmanifest.json
tests/fixtures/manifest_mod_common_only/common/: common.yumiamod.json
tests/fixtures/manifest_mod_features_and_common/: nioh3modmanifest.json
tests/fixtures/manifest_mod_features_and_common/common/: common.yumiamod.json
tests/fixtures/manifest_mod_features_only/: nioh3modmanifest.json
tests/fixtures/manifest_mod_optional_only/: nioh3modmanifest.json
tests/fixtures/manifest_mod_with_name/: nioh3modmanifest.json
tests/fixtures/manifest_partial_metadata/: nioh3modmanifest.json
(+11 files in other folders)
